syntax = "proto2";

package remote;

// Host -udp> Multicast

message HostAdvertisement {
    required uint32 websocket_port = 1;
    // Display name of this host (usually the device hostname)
    optional string hostname = 2;
    // Random per-instance id to allow clients to recognise hosts across multiple network interfaces.
    optional uint32 instance_id = 3;
}

// Client -ws> Host

message WsStreamRequest {
    enum WsStream {
        FieldGeometry = 1;
        GameState = 2;
        VisMappings = 3;
    }

    repeated WsStream stream = 1;
}

message UdpStreamRequest {
    enum UdpStream {
        WorldState = 1;
        Visualizations = 2;
    }

    repeated UdpStream stream = 1;
    required uint32 port = 2;
}
